# zelos-extension-v2g

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
.github/workflows/: CI.yml  release.yml
native/: README.md  build-linux.sh  build.sh  v2g_din_shim.c
tests/: test_convert.py
tests/files/: README.md  v2g_din_session.pcap
zelos_extension_v2g/: __init__.py  codec.py  converter.py  extension.py  live.py  pcap.py  protocol.py  slac.py  stream.py
zelos_extension_v2g/cli/: __init__.py  app.py  convert.py  decode.py  live.py
zelos_extension_v2g/exi/: __init__.py  libv2g.py
zelos_extension_v2g/exi/_lib/: libv2gshim-darwin-arm64.dylib
