[project]
name = "zelos-extension-v2g"
version = "0.1.0"
description = "ISO 15118 / DIN 70121 V2G (EV-charger) communication decode and pcap-to-trace conversion"
authors = [{ name = "Zelos", email = "support@zeloscloud.io" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["zelos", "extension", "v2g", "iso15118", "din70121", "ccs", "ev-charging", "exi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # >= 0.0.10a5: TraceWriter.close() force-flushes buffered events, so the converter
    # needs no post-write settle. Earlier stable (0.0.9) drops rows on fast conversions.
    "zelos-sdk>=0.0.10a5",
    "rich-click>=1.8.0",
    "scapy>=2.5.0",
]

[project.scripts]
zelos-extension-v2g = "main:cli"

[project.urls]
Homepage = "https://github.com/zeloscloud/zelos-extension-v2g"
Repository = "https://github.com/zeloscloud/zelos-extension-v2g"
Issues = "https://github.com/zeloscloud/zelos-extension-v2g/issues"
Documentation = "https://docs.zeloscloud.io/extensions"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "tomli>=2.3.0; python_version < '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zelos_extension_v2g"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO"

[tool.ruff]
target-version = 'py311'
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "B008",   # function call in defaults (common in decorators)
]

[tool.ruff.lint.pydocstyle]
convention = "google"
